--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,68 @@
-.App {
+body {
+  background: var(--text-dark);
+}
+
+.App {}
+
+.App h1 {
+  font-family: 'Amatic SC', cursive;
+  font-size: var(--font-size-subheadline);
   text-align: center;
+  color: var(--teal-050)
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+@media screen and (max-width: 440px) {
+  .App h1 {
+    font-size: var(--font-size-6);
+  }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+/* Single tracks */
+.track {
+  background: var(--teal-300);
+  color: var(--magenta-900);
+  padding: 0.5rem;
+  margin: var(--size-1);
+  border-radius: var(--border-radius-1);
+
+  display: flex !important;
+  align-items: center;
+}
+
+.button {
+  outline: none;
+  border: none;
+  background: transparent;
+  color: var(--magenta-700);
+  cursor: pointer;
+}
+
+.song-title {
+  margin-left: 20px;
+}
+
+/* Player controls */
+.controls {
+  background: var(--cyan-800);
+  padding: 0.5rem;
+  margin: var(--size-1);
+  border-radius: var(--border-radius-1);
+
+  display: flex !important;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.controlsBtn {
+  margin: 5px;
+  outline: none;
+  border: none;
+  background: transparent;
+  color: var(--teal-200);
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.current-track {
+  color: var(--teal-200);
 }
